# calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  addition.h  calculator.cpp  calculator.h  division.cpp  division.h  full  full.cpp  main  main.cpp  multiplication.cpp  plan.md  subtraction.cpp  subtraction.h
build-win/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
docs/: index.md
lib/: calculator.h  division.h  multiplication.h  subtraction.h
src/: addition.cpp  calculation.cpp  calculator.cpp  division.cpp  main.cpp  multiplication.cpp  subtraction.cpp
tests/: test  test.cpp  test_calculator.cpp
